# sochess-ws

./: .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  index.ts  package.json
src/: db.rs  game.rs  game_handler.rs  game_rules.rs  handler.rs  main.rs  state.rs  user.rs  websocket.rs  websocket_message.rs
src/chessops/: bitboard.rs  board.rs  color.rs  fen.rs  file.rs  lookup_tables.rs  mod.rs  move_type.rs  piece.rs  player.rs  position.rs  quadrant.rs  rank.rs  role.rs  square.rs
src/chessops/movegen/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  rook.rs
test/: test_api.sh  test_api_create_game.sh  test_api_create_user.sh
