[package]
name = "sochess_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.4", features = ["ws", "tracing"] }
bit-vec = "0.7.0"
bson = { version = "2.9.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.33", features = ["serde"] }
futures = "0.3.30"
mongodb = "2.8.0"
nanoid = "0.4.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
